# Sputnik_TT

./: .env.dev  README.md  docker-compose.dev.yml
backend/: pyproject.toml
backend/migrations/: env.py
backend/src/: main.py
backend/src/alerts/: models.py  router.py  service.py
backend/src/core/: config.py  database.py  exceptions.py
backend/src/files/: dependencies.py  models.py  router.py  service.py  storage.py
backend/src/scanning/: celery_app.py  metadata.py  scan.py  tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_files.py
backend/tests/unit/: test_metadata.py  test_scan.py  test_service_cleanup.py  test_storage.py
docs/plans/: backend-refactor.md  frontend-layers.md
frontend/: tsconfig.json
frontend/src/api/: alerts.ts  client.ts  files.ts
frontend/src/app/: page.tsx
frontend/src/components/: AlertsTable.tsx  FilesTable.tsx  PageHeader.tsx  UploadModal.tsx
frontend/src/hooks/: useDashboardData.ts  useFileUpload.ts
frontend/src/lib/: format.ts  status.ts
