[project]
name = "backend"
version = "0.1.0"
description = "File exchange service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
